# comfyui-custom-node-linter

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
eslint-comfyui/: .eslintrc.example.js  CHANGELOG.md  README.md  jest.config.js  package.json  tsconfig.json
eslint-comfyui/examples/: bad-usage.ts  good-usage.ts
eslint-comfyui/scripts/: extract-deprecated-apis.js  test-plugin.js
eslint-comfyui/src/: index.ts
eslint-comfyui/src/configs/: index.ts
eslint-comfyui/src/data/: deprecated-apis.json
eslint-comfyui/src/rules/: index.ts  no-deprecated-comfyui-apis.ts
eslint-comfyui/tests/: README.md  setup.ts
eslint-comfyui/tests/fixtures/: legacy-extension.ts  legacy-widget.vue  modern-extension.ts
eslint-comfyui/tests/integration/: extension-linting.test.ts  rule-execution.test.ts  test-eslintrc.js
eslint-comfyui/tests/performance/: large-codebase.test.ts
eslint-comfyui/tests/rules/: no-deprecated-comfyui-apis.test.ts
examples/: bad_node.py  good_node.py
pylint_comfyui/: __init__.py
pylint_comfyui/checkers/: __init__.py  folder_paths.py  node_structure.py  security.py
tests/: __init__.py  test_integration.py
